--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -196,20 +196,23 @@ body {
 
     padding: 10px;
     margin: 24px;
-    border-radius: 24px;
+    border-radius: 24px;    
+}
+
+.content-effect{
     transition: all ease-in-out 0.2s;
     box-shadow: 0px 8px 16px 0px #d9d9d9; //, inset -4px -4px 16px 0px #e9e9e9;
     border: 4px solid transparent;
 }
 
-.menu-content-item-wrap:hover {
+.content-effect:hover {
     transition: all ease-in-out 0.2s;
     transform: scale(1.02);
     box-shadow: 0px 8px 16px 0px #d9d9d9;
     border: 4px solid #999999;
 }
 
-.menu-content-item-wrap:active {
+.content-effect:active {
     transition: all ease-in-out 0.2s;
     transform: scale(1);
     box-shadow: inset 0px 8px 16px 0px #d9d9d9;
