--- a/_includes/vertical_menu.html
+++ b/_includes/vertical_menu.html
@@ -1,7 +1,7 @@
 <nav class="vertical-menu">
 	<div class="profile-container">
 		{% if src %}
-		<img src="{{site.baseurl}}/assets/images/profile.jpg" alt="https://avatars.githubusercontent.com/u/114140050?v=4" class="profile-image">
+		<img src="assets/images/profile.jpg" alt="https://avatars.githubusercontent.com/u/114140050?v=4" class="profile-image">
 		{% else %}
 		<img src="https://avatars.githubusercontent.com/u/114140050?v=4" alt="profile image" class="profile-image">
 		{% endif %}
