--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <head>
-	<link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css" />
-	<link rel="stylesheet" href="{{site.baseurl}}/assets/css/post.css" />
+	<link rel="stylesheet" href="/assets/css/syntax.css" />
+	<link rel="stylesheet" href="/assets/css/post.css" />
 </head>
 
 <div class="post">
