--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="ko-KR">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css" />
+		<link rel="stylesheet" href="/assets/css/styles.css" />
 
 		<title>{{page.title}}</title>
 	</head>
