css 파일 통합, 페이지 레이아웃 정렬

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="/assets/css/styles.css" />
-
 		<title>{{page.title}}</title>
 	</head>
-
+	
 	<body>
 		<div class="page">
 			<div class="main">
-				{{content}}
+				<div class="landing-main">
+					<header class="horizontal-menu">
+						<p>{{page.title}}</h1>
+					</header>
+					<div class="content-wrap">
+						{{content}}
+					</div>
+				</div>
 				{% include vertical_menu.html %}
 			</div>
 		</div>
