--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,20 +50,26 @@ body {
     align-items: center;
     gap: 20px;
     padding-left: 20px;
-    background-color: #9ed18a;
+    background-color: #868686;
     box-shadow: 0 4px 10px 0 #d0d0d0;
 
     margin-bottom: 120px;
+
+    flex-shrink: 0;
+    flex-grow: 0;
 }
 
 .horizontal-menu * {
     font-size: 24px;
+    font-weight: bold;
+    color: #ffffff;
 }
 
 .page {
     display: flex;
     box-sizing: border-box;
     width: 1300px;
+    height: 100vh;
     flex-shrink: 0;
     flex-direction: column;
 }
@@ -73,13 +79,17 @@ body {
     flex-direction: row;
     justify-content: space-between;
     width: inherit;
-    min-height: 100vh;
+    height: 100vh;
+
+    flex-shrink: 0;
+    flex-grow: 1;
 }
 
 .landing-main {
     display: flex;
     flex-direction: column;
     width: inherit;
+    height: 100vh;
 }
 
 .landing-wrap {
@@ -180,29 +190,26 @@ body {
 }
 
 // vertical menu
+
+.vertical-menu {
+    box-sizing: border-box;
+    width: 300px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #fafafa;
+    color: black;
+    box-shadow: inset 8px 0px 8px 0px #d6d6d6;
+
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
 .vertical-menu-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-}
-
-.vertical-menu {
-    flex-grow: 0;
-    width: 300px;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-    height: inherit;
-    background-color: #fafafa;
-    color: black;
-
-    /* border-left: 2px solid rgb(177, 177, 177); */
-
-    box-shadow: inset 8px 0px 8px 0px #d6d6d6;
-
-    flex-shrink: 0;
 }
 
 .vertical-menu-title {
@@ -276,7 +283,7 @@ body {
 // postlist
 .post-list{
     width: 100%;
-    height: 1000px;
+    height: 100vh;
 
     box-sizing: border-box;
     padding: 20px;
