--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,8 +6,12 @@
 }
 
 html {
-    overflow: scroll;
+    overflow: auto;
 }
+
+// html, body, .main{
+//     height: 100vh;
+// }
 
 body,
 div,
@@ -56,7 +60,7 @@ body {
     margin-bottom: 120px;
 
     flex-shrink: 0;
-    flex-grow: 0;
+    flex-grow: -1;
 }
 
 .horizontal-menu * {
@@ -89,7 +93,7 @@ body {
     display: flex;
     flex-direction: column;
     width: inherit;
-    height: 100vh;
+    height: 100%;
 }
 
 .landing-wrap {
@@ -133,6 +137,8 @@ body {
     height: 300px;
 
     border-radius: 24px;
+    flex-shrink: 0;
+    flex-grow: -1;
 }
 
 .category-title{
@@ -202,7 +208,7 @@ body {
     box-shadow: inset 8px 0px 8px 0px #d6d6d6;
 
     flex-shrink: 0;
-    flex-grow: 0;
+    flex-grow: -1;
 }
 
 .vertical-menu-container {
