--- a/_includes/vertical_menu.html
+++ b/_includes/vertical_menu.html
@@ -1,3 +1,9 @@
+<link rel="stylesheet" href="/assets/tipuesearch/css/tipuesearch.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/assets/tipuesearch/tipuesearch_content.js"></script>
+<script src="/assets/tipuesearch/tipuesearch_set.js"></script>
+<script src="/assets/tipuesearch/tipuesearch.min.js"></script>
+
 <nav class="vertical-menu">
 	<div class="profile-container">
 		{% if src %}
@@ -23,9 +29,19 @@
 			{% endfor %}
 		</div>
 	</div>
-	<hr width="80%" color="#d6d6d6">
-	
+	<hr width="80%" color="#d6d6d6">	
+
 	<div class="vertical-menu-container">
+		<div class="search-wrap">
+			<form action="/search">
+				<div class="tipue_search_left">
+					<img src="/assets/tipuesearch/search.png" class="tipue_search_icon">
+				</div>
+				<div class="tipue_search_right">
+					<input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required></div>
+				<div style="clear: both;"></div>
+			 </form>
+		</div>
 		{% for item in site.data.navigation %}
 		<div class="vertical-menu-title" onclick="location.href='{{ item.link }}'" {% if page.url == item.link %} class="current" {% endif %}>{{ item.name }}</div>
 		{% endfor %}
