--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -386,6 +386,7 @@ h6 {
     font-size: 1em;
     margin-top: 0.8em;
     margin-bottom: 0.8em;
+    word-break: keep-all;
 }
 
 .post a[id=url] {
@@ -405,13 +406,18 @@ h6 {
     display: block;
     max-width: 700px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     border: 2px solid #e9e9e9;
     border-radius: 8px;
     box-shadow: 4px 4px 4px #e9e9e9;
     transition: all 100ms ease-in;
+}
+
+.post .caption{
+    text-align: center;
+    color: #1685d0;
 }
 
 .post ul {
