--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,69 +1,68 @@
 ---
 layout: default
 ---
-<head>
-	<link rel="stylesheet" href="/assets/css/syntax.css">
-</head>
-
 <div class="post">
 	<h1>{{ page.title }}</h1>
 	<div class="post-date">{{ page.date | date: "%Y년 %m월 %d일" }}</div>
-	<div style="text-align: center;">
-		  <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove_first: '/'}}.svg" />
-	  </div> 
-	{{content}} 
-	{%- comment -%} 
-	{% if page.tags %}
-	<small>
-		tags:
-		<em>{{ page.tags | join: "</em>
-		-
-		<em>" }}</em>
-	</small>
-	{% endif %} 
-	{%- endcomment -%}
-	<div class="comment-container">
-		<script src="https://giscus.app/client.js"
-        data-repo="mamananama/blog-comment"
-        data-repo-id="R_kgDONmD07w"
-        data-category="Announcements"
-        data-category-id="DIC_kwDONmD0784Clu5b"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="ko"
-        data-loading="lazy"
-        crossorigin="anonymous"
-        async>
-		</script>
-	</div>
-	<div class="">
-		{% assign posts = site.posts | where: "category", page.category %}
-		{% for post in posts %}
-		{% if post.title == page.title %}
-			{% assign post_index = forloop.index0 %}
-			{% assign prev_index = post_index | plus: 1 %}
-			{% assign next_index = post_index | minus: 1 %}
-		{% endif %}
-		{% endfor %}
-
-		<div class="post-navigation">
-		{% if prev_index < posts.size %}
-			<div class="prev-post">
-			<a href="{{ posts[prev_index].url }}">« {{ posts[prev_index].title }}</a>
-			</div>
-		{% endif %}
-		
-		{% if next_index >= 0 %}
-			<div class="next-post">
-			<a href="{{ posts[next_index].url }}">{{ posts[next_index].title }} »</a>
-			</div>
-		{% endif %}
+	<div class="hits-wrap" style="text-align: center;">
+		<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove_first: '/'}}.svg" />
+	</div> 
+	<div class="preview-warp">{{page.preview}}</div>
+	<div class="horizon-bar"></div>
+	<div class="post-body">
+		{{content}} 
+		{%- comment -%} 
+		{% if page.tags %}
+		<small>
+			tags:
+			<em>{{ page.tags | join: "</em>
+			-
+			<em>" }}</em>
+		</small>
+		{% endif %} 
+		{%- endcomment -%}
+		<div class="comment-container">
+			<script src="https://giscus.app/client.js"
+			data-repo="mamananama/blog-comment"
+			data-repo-id="R_kgDONmD07w"
+			data-category="Announcements"
+			data-category-id="DIC_kwDONmD0784Clu5b"
+			data-mapping="pathname"
+			data-strict="0"
+			data-reactions-enabled="1"
+			data-emit-metadata="0"
+			data-input-position="top"
+			data-theme="preferred_color_scheme"
+			data-lang="ko"
+			data-loading="lazy"
+			crossorigin="anonymous"
+			async>
+			</script>
 		</div>
-
+		<div class="">
+			{% assign posts = site.posts | where: "category", page.category %}
+			{% for post in posts %}
+			{% if post.title == page.title %}
+				{% assign post_index = forloop.index0 %}
+				{% assign prev_index = post_index | plus: 1 %}
+				{% assign next_index = post_index | minus: 1 %}
+			{% endif %}
+			{% endfor %}
+	
+			<div class="post-navigation">
+			{% if prev_index < posts.size %}
+				<div class="prev-post">
+				<a href="{{ posts[prev_index].url }}">« {{ posts[prev_index].title }}</a>
+				</div>
+			{% endif %}
+			
+			{% if next_index >= 0 %}
+				<div class="next-post">
+				<a href="{{ posts[next_index].url }}">{{ posts[next_index].title }} »</a>
+				</div>
+			{% endif %}
+			</div>
+		</div>
 	</div>
 </div>
 <script src="/assets/scripts/jquery-3.7.1.min.js"></script>
