--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -57,7 +57,7 @@ body {
     background-color: #868686;
     box-shadow: 0 4px 10px 0 #d0d0d0;
 
-    margin-bottom: 120px;
+    margin-bottom: 20px;
 
     flex-shrink: 0;
     flex-grow: -1;
@@ -359,14 +359,32 @@ h6 {
     margin-bottom: 32px;
 }
 
-.abstract {
+.hits-wrap{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+.preview-warp {
     /* border: 1px solid #888888; */
     /* border-radius: 8px; */
     font-size: 1.2em;
     border-radius: 4px;
+    background-color: #e8e8e8;
     color: #888888;
     padding: 20px;
 
+}
+
+.horizon-bar{
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+    width: 100%;
+    height: 2px;
+    background-color: #bbbbbb;
 }
 
 .post {
@@ -382,14 +400,19 @@ h6 {
     word-break: keep-all;
 }
 
-.post p {
-    font-size: 1em;
+.post-body{
+    width: 100%;
+    word-break: keep-all;
+}
+
+.post-body p {
+    font-size: 1.1em;
     margin-top: 0.8em;
     margin-bottom: 0.8em;
     word-break: keep-all;
 }
 
-.post a[id=url] {
+.post-body a[id=url] {
     display: flex;
     align-items: center;
     margin: 20px 0 20px 0;
@@ -402,7 +425,7 @@ h6 {
     background-color: #f1f1f1
 }
 
-.post img {
+.post-body img {
     display: block;
     max-width: 700px;
     margin-top: 20px;
@@ -415,19 +438,19 @@ h6 {
     transition: all 100ms ease-in;
 }
 
-.post .caption{
+.post-body .caption{
     text-align: center;
     color: #1685d0;
 }
 
-.post ul {
+.post-body ul {
     margin-top: 6px;
     margin-bottom: 20px;
     list-style: disc;
     list-style-position: inside;
 }
 
-.post li {
+.post-body li {
     margin-bottom: 40px;
     padding-left: 20px;
     border-left: 2px dashed #e1e1e1;
