--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 ---
+<link rel="stylesheet" href="/assets/css/syntax.css">
 <div class="post">
 	<h1>{{ page.title }}</h1>
 	<div class="post-date">{{ page.date | date: "%Y년 %m월 %d일" }}</div>
 	<div class="hits-wrap" style="text-align: center;">
-		<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove_first: '/'}}.svg" />
+		<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove_first: '/'}}&count_bg=%23C9C9C9&title_bg=%233D3D3D&icon=&icon_color=%23000000&title=Views&edge_flat=false" />
 	</div> 
 	<div class="preview-warp">{{page.preview}}</div>
 	<div class="horizon-bar"></div>
