--- a/_includes/category_post_list.html
+++ b/_includes/category_post_list.html
@@ -1,12 +1,11 @@
 <div class="post-list">
-    {% assign category_name = page.title %}
-    {% for post in site.categories[category_name] %}
-        <div class="post-item-wrap" onclick="location.href='{{ post.url }}'" style="cursor: pointer;">
-            <div class="post-item content-effect">
-                <h2>{{ post.title }}</h2>
-                <p>{{post.preview}}</p>
-                <p>{{ post.date | date: "%Y-%m-%d" }}</p>
-            </div>
-        </div>
-    {% endfor %}
+	{% assign category_name = page.title %} {% for post in site.categories[category_name] %}
+	<div class="post-item-wrap" onclick="location.href='{{ post.url }}'" style="cursor: pointer">
+		<div class="post-item content-effect">
+			<h2>{{ post.title }}</h2>
+			<p>{{post.preview}}</p>
+			<p>{{ post.date | date: "%Y-%m-%d" }}</p>
+		</div>
+	</div>
+	{% endfor %}
 </div>
