--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,6 +45,11 @@ body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    touch-action: manipulation;
 }
 
 .horizontal-menu {
@@ -70,7 +75,7 @@ body {
 }
 
 .breadcrumb{
-    padding-left: 50px;
+    padding-right: 50px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
