--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -600,6 +600,11 @@ h6 {
     padding-bottom: 0.8em;
 }
 
+.post-body h3{
+    padding-top: 1.1em;
+    padding-bottom: 0.6em;
+}
+
 .post-body p {
     font-size: 1.1em;
     margin-top: 0.8em;
@@ -621,13 +626,19 @@ h6 {
     background-color: #f1f1f1
 }
 
+.post-body li > p:first-child {
+    display: inline;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+
 .post-body img {
     display: block;
-    max-width: 700px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    box-sizing: border-box;
+    max-width: 80%;
+    height: auto;
+    margin: 20px auto 10px;
     border: 2px solid #e9e9e9;
     border-radius: 8px;
     box-shadow: 4px 4px 4px #e9e9e9;
